--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pdf-lib": "^1.17.1",
     "puppeteer": "^21.3.1",
     "soap": "^1.0.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "xml2js": "^0.6.2"
   }
 }
